# GAS

./: .gitignore  CMakeLists.txt  GAS-Hardware-erc.rpt  README.md
.github/workflows/: build-linux.yml  build-macos.yml  build-standalone.yml  build-windows.yml
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/DSP/: FeedbackBlock.h  FilterClipperBlock.h  ModularFxChain.h  StereoTankCrossfadeBlock.h  TankIRBlock.h  WetDryMixerBlock.h
cmake/: CopyFileToDirectory.cmake  CopySpringIRsToPlugin.cmake  CopyVST3Bundle.cmake  SyncDirectory.cmake
hardware/: README.md  interfaces.md  requirements-traceability.md  rev-a-bench-test-procedures.md  rev-a-board-connector-schedule.csv  rev-a-board-implementation-matrix.md  rev-a-board-outline-assumptions.csv  rev-a-board-outline-assumptions.md  rev-a-board-package-freeze.md  rev-a-board-placement-and-zones.md  rev-a-bringup-sequence.md  rev-a-capacitor-policy.md  rev-a-capture-value-tables.md  rev-a-circuit-starting-points.md  rev-a-control-backplane-definition.md  rev-a-control-backplane-schematic-ready-definition.md  rev-a-control-harnesses.md  rev-a-control-ranges-and-laws.md  rev-a-controls-and-panel.md  rev-a-crossfade-feedback-wet-schematic-ready-definition.md  rev-a-electrical-capture-worksheet.md  rev-a-endcap-hole-table.csv  rev-a-endcap-hole-table.md  rev-a-endcap-panel-layout.md  rev-a-ext-routing-schematic-ready-definition.md  rev-a-external-dc-power.md  rev-a-filter-clipper-schematic-ready-definition.md  rev-a-harness-cut-lengths.csv  rev-a-harness-cut-lengths.md  rev-a-harness-map.md  rev-a-interconnect-pin-map.md  rev-a-interconnects.md  rev-a-io-schematic-ready-definition.md  rev-a-layout-rules.md  rev-a-manufacturing.md  rev-a-mode-truth-tables.md  rev-a-numeric-targets.md  rev-a-open-issues.md  rev-a-pcb-fabrication-assumptions.md  rev-a-pipe-enclosure-concept.md  (+10 more)
hardware/boards/: crossfade-feedback-wet-board.md  ext-tank-routing-board.md  filter-clipper-board.md  input-output-board.md  system-remaining.md
hardware/bom/: README.md  rev-a-board-priced-summary.md  rev-a-bom-notes.md  rev-a-common-passives-reference-bom.csv  rev-a-common-smd-policy.md  rev-a-connectors-and-harness-reference-bom.csv  rev-a-control-backplane-preliminary-bom.csv  rev-a-control-backplane-priced-bom.csv  rev-a-core-priced-bom.csv  rev-a-cost-summary.md  rev-a-crossfade-feedback-preliminary-bom.csv  rev-a-crossfade-feedback-priced-bom.csv  rev-a-ext-routing-preliminary-bom.csv  rev-a-ext-routing-priced-bom.csv  rev-a-filter-clipper-preliminary-bom.csv  rev-a-filter-clipper-priced-bom.csv  rev-a-input-output-preliminary-bom.csv  rev-a-input-output-priced-bom.csv  rev-a-panel-and-mechanical-reference-bom.csv  rev-a-panel-controls-priced-bom.csv  rev-a-power-backplane-preliminary-bom.csv  rev-a-power-backplane-priced-bom.csv  rev-a-preliminary-board-boms.md  rev-a-procurement-snapshot.csv  rev-a-procurement-snapshot.md  rev-a-supply-watch.md  rev-a-tank-driver-recovery-preliminary-bom.csv  rev-a-tank-driver-recovery-priced-bom.csv
hardware/kicad/: GAS-Hardware.kicad_pro  GAS-Hardware.kicad_sch  README.md  audit-rev-a-capture.py  crossfade-feedback-wet.kicad_pcb  crossfade-feedback-wet.kicad_prl  crossfade-feedback-wet.kicad_pro  crossfade-feedback-wet.kicad_sch  export-rev-a-release.ps1  exports  ext-tank-routing.kicad_pcb  ext-tank-routing.kicad_prl  ext-tank-routing.kicad_pro  ext-tank-routing.kicad_sch  filter-clipper.drc.json  filter-clipper.kicad_pcb  filter-clipper.kicad_prl  filter-clipper.kicad_pro  filter-clipper.kicad_sch  fp-lib-table  io-board.kicad_pcb  io-board.kicad_prl  io-board.kicad_pro  io-board.kicad_sch  io-board.verify.tmp  power-backplane.kicad_pcb  power-backplane.kicad_prl  power-backplane.kicad_pro  power-backplane.kicad_sch  rev-a-capture-audit.md  rev-a-net-label-manifest.csv  rev-a-order-readiness.md  rev-a-sheet-population-plan.md  rev-a-symbol-manifest.csv  schematic_review.md  tank-driver-recovery.kicad_pcb  tank-driver-recovery.kicad_prl  tank-driver-recovery.kicad_pro  tank-driver-recovery.kicad_sch  test-rev-a-order-readiness.ps1  (+2 more)
hardware/kicad/GAS.pretty/: URA_YMD-10WR3.kicad_mod
hardware/kicad/datasheet_cache/: R-78E-0.5_4908d77dcc.txt  bd139-bd140.datasheet.txt  bd139-bd140.summary.md  eVH_35d0fc229b.txt  eXH_98b6fe789a.txt  en-g5v_2_6fa84e51e1.txt  g5v2.summary.md  jst-vh.summary.md  jst-xh.summary.md  opa1644.summary.md  opa1644_652e77ac8c.txt  opa1656.summary.md  opa1656_eb3ddbf012.txt  opa1679.summary.md  opa1679_e09979f1c7.txt  r78e.summary.md  ura-ymd-10wr3.txt  ura2415ymd.summary.md
hardware/kicad/fab/: ORDER-PACKET.md
hardware/kicad/rebuild/: README.md  crossfade-feedback-wet.dsn  crossfade-feedback-wet.ses  design-review.md  emit_review.py  expected-bom-check.json  ext-drc.json  ext-drc.rpt  ext-erc.json  ext-sim-erc.json  ext-sim.cir  ext-tank-routing.dsn  ext-tank-routing.ses  fc-drc.json  fc-erc.json  fc-sim-erc.json  fc-sim.cir  filter-clipper.dsn  fix_u2.py  (+54 more)
(+235 files in other folders)
